--- a/index.html
+++ b/index.html
@@ -87,113 +87,100 @@
           <option type="checkbox" value="4">Open Source</option>
         </select>
       </div>
-        <p>What would you like to see improved? <span>(Check all that apply)</span></p>
-        <div class="suggestions">
-          <input
+      <p>
+        What would you like to see improved? <span>(Check all that apply)</span>
+      </p>
+      <div class="suggestions">
+        <input
           type="checkbox"
           id="Front-end"
           name="improved"
           value="Front-end-Projects"
-          />
+        />
         <label for="Front-end">Front-end Projects</label>
-        </div>
-      <div class="suggestions">
-         <input
-          type="checkbox"
-          id="Back-end Projects"
-          name="improved"
-          value="Back-end-Projects"
-          />
-        <label for="Back-end Projects">Back-end Projects</label>
-        </div>
-      <div class="suggestions">
-         <input
-          type="checkbox"
-          id="Data Visualization"
-          name="improved"
-          value="Data-Visualization"
-         />
-        <label for="Data Visualization">Data Visualization</label>
-      </div>
-      <div class="suggestions">
-         <input
-          type="checkbox"
-          id="Challenges"
-          name="improved"
-          value="Challenge"
-         />
-        <label for="Challenges">Challenges</label>
-      </div>
-      <div class="suggestions">
-         <input
-          type="checkbox"
-          id="Open Source"
-          name="improved"
-          value="Open-Source"
-         />
-        <label for="Open Source">Open Source</label>
-      </div>
-      <div class="suggestions">
-         <input
-          type="checkbox"
-          id="Community"
-          name="improved"
-          value="Community"
-         />
-        <label for="Community">Community</label>
-      </div>
-      <div class="suggestions">
-         <input
-          type="checkbox"
-          id="Gitter help rooms"
-          name="improved"
-          value="Gitter-help-rooms"
-         />
-        <label for="Gitter help rooms">Gitter help rooms</label>
-      </div>
-      <div class="suggestions">
-         <input 
-         type="checkbox" 
-         id="Videos" 
-         name="improved" 
-         value="Videos" 
-         />
-        <label for="Videos">Videos</label>
-      </div>
-      <div class="suggestions">
-         <input
-          type="checkbox"
-          id="City Meetups"
-          name="improved"
-          value="City-Meetups"
-          />
-        <label for="City Meetups">City Meetups</label>
-      </div>
-      <div class="suggestions">
-         <input
-          type="checkbox"
-          id="Wiki"
-          name="improved"
-          value="Wiki"
-         />
-        <label for="Wiki">Wiki</label>
       </div>
       <div class="suggestions">
         <input
           type="checkbox"
-          id="Forum"
+          id="Back-end Projects"
           name="improved"
-          value="Forum"
-         />
+          value="Back-end-Projects"
+        />
+        <label for="Back-end Projects">Back-end Projects</label>
+      </div>
+      <div class="suggestions">
+        <input
+          type="checkbox"
+          id="Data Visualization"
+          name="improved"
+          value="Data-Visualization"
+        />
+        <label for="Data Visualization">Data Visualization</label>
+      </div>
+      <div class="suggestions">
+        <input
+          type="checkbox"
+          id="Challenges"
+          name="improved"
+          value="Challenge"
+        />
+        <label for="Challenges">Challenges</label>
+      </div>
+      <div class="suggestions">
+        <input
+          type="checkbox"
+          id="Open Source"
+          name="improved"
+          value="Open-Source"
+        />
+        <label for="Open Source">Open Source</label>
+      </div>
+      <div class="suggestions">
+        <input
+          type="checkbox"
+          id="Community"
+          name="improved"
+          value="Community"
+        />
+        <label for="Community">Community</label>
+      </div>
+      <div class="suggestions">
+        <input
+          type="checkbox"
+          id="Gitter help rooms"
+          name="improved"
+          value="Gitter-help-rooms"
+        />
+        <label for="Gitter help rooms">Gitter help rooms</label>
+      </div>
+      <div class="suggestions">
+        <input type="checkbox" id="Videos" name="improved" value="Videos" />
+        <label for="Videos">Videos</label>
+      </div>
+      <div class="suggestions">
+        <input
+          type="checkbox"
+          id="City Meetups"
+          name="improved"
+          value="City-Meetups"
+        />
+        <label for="City Meetups">City Meetups</label>
+      </div>
+      <div class="suggestions">
+        <input type="checkbox" id="Wiki" name="improved" value="Wiki" />
+        <label for="Wiki">Wiki</label>
+      </div>
+      <div class="suggestions">
+        <input type="checkbox" id="Forum" name="improved" value="Forum" />
         <label for="Forum">Forum</label>
       </div>
       <div class="suggestions">
-         <input
+        <input
           type="checkbox"
           id="Additional Courses"
           name="improved"
           value="Additional-Courses"
-         />
+        />
         <label for="Additional Courses">Additional Courses</label>
       </div>
       <div>
@@ -205,8 +192,8 @@
           name="comment"
           id="comments"
         ></textarea>
-      <button type="submit" id="submit">Submit</button>
-    </div>
+        <button type="submit" id="submit">Submit</button>
+      </div>
     </form>
   </body>
 </html>
